[gd_scene load_steps=5 format=3 uid="uid://cbt15qjyku0fn"]

[ext_resource type="Script" path="res://enemy/shooting_enemy.gd" id="1_s41n1"]
[ext_resource type="Texture2D" uid="uid://cs8fhv388scxd" path="res://player/player_sprite.png" id="2_tlf2b"]
[ext_resource type="Texture2D" uid="uid://cmntcfnqdnb2y" path="res://player/gun_sprite.png" id="3_kmek6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6wy5m"]
radius = 16.0

[node name="ShootingEnemy" type="CharacterBody2D"]
scale = Vector2(0.7, 0.7)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_s41n1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tlf2b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6wy5m")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Gun" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Gun"]
position = Vector2(30, 0)
scale = Vector2(0.571429, 1)
texture = ExtResource("3_kmek6")

[node name="ShootPoint" type="Node2D" parent="Gun"]
position = Vector2(39, 0)

[node name="RayCast2D" type="RayCast2D" parent="Gun"]
target_position = Vector2(1000, 0)
collision_mask = 10

[node name="ShootTimer" type="Timer" parent="Gun"]
wait_time = 0.6
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Gun/ShootTimer" to="." method="_on_shoot_timer_timeout"]
